--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,11 @@
-.crystal-image {
+h1 {
+  font-family: fantasy;
+  font-size: 4rem;
+  text-align: center;
+  color: blueviolet;
+  outline: 6rem;
+}
+.crystal {
   width: 300px;
   height: 300px;
 }
