--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,55 @@ h1 {
   font-size: 4rem;
   text-align: center;
   color: blueviolet;
-  outline: 6rem;
 }
 .crystal {
   width: 300px;
   height: 300px;
+}
+#crystals {
+  display: flex;
+  justify-content: space-between;
+}
+
+#resultsDiv {
+  display: flex;
+  justify-content: center;
+  font-size: 3rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+#reset {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  background-color: aquamarine;
+  height: 5rem;
+  width: 12rem;
+  justify-content: center;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 2rem;
+  padding-left: 25px;
+}
+
+#NTG {
+  font-family: fantasy;
+  font-size: 3rem;
+  text-align: center;
+  color: darkorchid;
+}
+
+#target {
+  font-family: fantasy;
+  font-size: 3rem;
+  text-align: center;
+  color: blue;
+}
+
+#stats {
+  display: flex;
+  justify-content: space-between;
+  font-family: fantasy;
+  font-size: 3rem;
+  color: orange;
+  margin: 25px;
 }
