--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ h1 {
   font-size: 4rem;
   text-align: center;
   color: blueviolet;
+  margin: 1rem;
 }
 .crystal {
   width: 300px;
@@ -11,6 +12,7 @@ h1 {
 #crystals {
   display: flex;
   justify-content: space-between;
+  margin: 2rem;
 }
 
 #resultsDiv {
@@ -38,6 +40,7 @@ h1 {
   font-size: 3rem;
   text-align: center;
   color: darkorchid;
+  margin: 2rem;
 }
 
 #target {
@@ -53,5 +56,5 @@ h1 {
   font-family: fantasy;
   font-size: 3rem;
   color: orange;
-  margin: 25px;
+  margin: 5rem;
 }
